charts/staging-apply/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cargocms-admin-client
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"    
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:

  rules:
  - host: cargocms-admin-client.jx-staging.k8s.trunksys.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cargocms-admin-client
          servicePort: 80
  tls:
  - hosts:
    - cargocms-admin-client.jx-staging.k8s.trunksys.com
    secretName: tls-staging
